// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flowcolumns Components should render CommentColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="max-w-xs truncate text-muted-foreground"
        >
          I'm a comment!
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-network h-4 w-4 text-blue-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="6"
              rx="1"
              width="6"
              x="16"
              y="16"
            />
            <rect
              height="6"
              rx="1"
              width="6"
              x="2"
              y="16"
            />
            <rect
              height="6"
              rx="1"
              width="6"
              x="9"
              y="2"
            />
            <path
              d="M5 16v-3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3"
            />
            <path
              d="M12 12V8"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 3`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-check h-4 w-4 text-gray-400"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="m9 15 2 2 4-4"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 4`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-forward h-4 w-4 text-orange-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 17 5-5-5-5"
            />
            <path
              d="M4 18v-2a4 4 0 0 1 4-4h12"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 5`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-image h-4 w-4 text-green-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
            <circle
              cx="9"
              cy="9"
              r="2"
            />
            <path
              d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 6`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-code h-4 w-4 text-yellow-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 12.5 8 15l2 2.5"
            />
            <path
              d="m14 12.5 2 2.5-2 2.5"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7z"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 7`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-braces h-4 w-4 text-purple-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 3H7a2 2 0 0 0-2 2v5a2 2 0 0 1-2 2 2 2 0 0 1 2 2v5c0 1.1.9 2 2 2h1"
            />
            <path
              d="M16 21h1a2 2 0 0 0 2-2v-5c0-1.1.9-2 2-2a2 2 0 0 1-2-2V5a2 2 0 0 0-2-2h-1"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 8`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file-text h-4 w-4 text-blue-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
            <path
              d="M10 9H8"
            />
            <path
              d="M16 13H8"
            />
            <path
              d="M16 17H8"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 9`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-file h-4 w-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V7Z"
            />
            <path
              d="M14 2v4a2 2 0 0 0 2 2h4"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 10`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-radio h-4 w-4 text-cyan-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.9 19.1C1 15.2 1 8.8 4.9 4.9"
            />
            <path
              d="M7.8 16.2c-2.3-2.3-2.3-6.1 0-8.5"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
            <path
              d="M16.2 7.8c2.3 2.3 2.3 6.1 0 8.5"
            />
            <path
              d="M19.1 4.9C23 8.8 23 15.1 19.1 19"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render TimeColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 text-right text-muted-foreground"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render TimeColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 text-right text-muted-foreground"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render pathColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="max-w-xs truncate"
        >
          <span
            class="flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert h-3 w-3 inline-block ml-1 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <span
              class="truncate"
            >
              http://address:22/path
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render pathColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="max-w-xs truncate"
        >
          <span
            class="flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-pause h-3 w-3 text-orange-500"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="16"
                rx="1"
                width="4"
                x="14"
                y="4"
              />
              <rect
                height="16"
                rx="1"
                width="4"
                x="6"
                y="4"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="lucide lucide-x h-3 w-3 inline-block ml-1 text-destructive"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 6 6 18"
              />
              <path
                d="m6 6 12 12"
              />
            </svg>
            <span
              class="truncate"
            >
              http://address:22/path
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: comment 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="max-w-xs truncate text-muted-foreground"
        >
          I'm a comment!
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-6 text-center"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-radio h-4 w-4 text-cyan-500"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4.9 19.1C1 15.2 1 8.8 4.9 4.9"
            />
            <path
              d="M7.8 16.2c-2.3-2.3-2.3-6.1 0-8.5"
            />
            <circle
              cx="12"
              cy="12"
              r="2"
            />
            <path
              d="M16.2 7.8c2.3 2.3 2.3 6.1 0 8.5"
            />
            <path
              d="M19.1 4.9C23 8.8 23 15.1 19.1 19"
            />
          </svg>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: index 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-12 text-right text-muted-foreground pr-2"
        >
          1
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: method 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 font-medium"
        >
          WSS
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: path 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="max-w-xs truncate"
        >
          <span
            class="flex items-center gap-1"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-triangle-alert h-3 w-3 inline-block ml-1 text-warning"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
              />
              <path
                d="M12 9v4"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
            <span
              class="truncate"
            >
              http://address:22/path
            </span>
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: quickactions 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-8 text-center"
          data-column="quickactions"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: size 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 text-right text-muted-foreground"
        >
          43b
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: status 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-12 font-medium text-green-600"
        >
          200
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: time 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 text-right text-muted-foreground"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: timestamp 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-24 text-muted-foreground text-xs"
        >
          1999-12-31 23:00:00.000
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: tls 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-4 text-center text-green-500"
        >
          🔒
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: version 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="w-16 text-muted-foreground"
        >
          HTTP/1.1
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
